# arcflow

./: .cursorrules  .gitignore  AGENTS.md  ARCFLOW_FOR_AI_AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  LICENSE-CORE.md  LICENSE-FAQ.md  README.md  REPO-SPLIT.md  ROADMAP.md  SECURITY.md  docker-compose.yml  llms-full.txt  llms.txt  renovate.json
.changeset/: README.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
cookbooks/: CONTRIBUTING.md  README.md  run-ci.sh
cookbooks/_template/: README.md  meta.toml  pyproject.toml
cookbooks/agent-knowledge-base/: 00-make-sample.py  03-confidence-retrieval.py  README.md  _load.py  meta.toml  pyproject.toml
cookbooks/agent-knowledge-base/rust/: Cargo.toml  README.md
cookbooks/algo-trading-llm-harness/: 01-persistent-memory.py  02-orchestrated-live-context.py  03-confidence-weighted-fusion.py  README.md  _load.py  meta.toml  pyproject.toml
cookbooks/algo-trading-world-model/: 03-confidence-weighted-fusion.py  README.md  _load.py  meta.toml  pyproject.toml
cookbooks/algo-trading-world-model/rust/: Cargo.toml  README.md
cookbooks/fraud-graph-traversal/: 00-make-sample.py  01-fraud-patterns.md  03-fan-detection.py  04-chain-detection.py  05-cypher-comparison.md  README.md  meta.toml  pyproject.toml
cookbooks/fraud-graph-traversal/rust/src/: lib.rs
cookbooks/from-sql-to-arcflow/: 01-shared-coworkers.py  02-confidence-tiered-query.py  03-multi-hop-industry.py  README.md  _common.py  meta.toml  pyproject.toml
cookbooks/from-sql-to-arcflow/rust/: Cargo.toml  README.md
cookbooks/from-sql-to-arcflow/rust/src/: lib.rs
cookbooks/multi-stream-spatiotemporal-world-model/: 00-make-sample.py  01-schema-design.md  03-coordinate-frames.md  06-multi-stream-sync.md  09-live-views.py  10-triggers-and-skills.py  README.md  _load.py  meta.toml  pyproject.toml
cookbooks/multi-stream-spatiotemporal-world-model/data/sample/: ground_truth.json  imu.parquet
cookbooks/multi-stream-spatiotemporal-world-model/rust/: Cargo.toml  README.md
cookbooks/multi-stream-spatiotemporal-world-model/rust/src/: lib.rs
cookbooks/sensor-fusion-livequery/: 01-schema-design.md  03-trust-weighted-alerts.py  04-live-polling.py  README.md  meta.toml  pyproject.toml
cookbooks/sensor-fusion-livequery/rust/: README.md
cookbooks/spatiotemporal-tactical-queries/: 01-counterfactual-replay.py  02-confidence-entity-resolution.py  03-observed-vs-predicted.py  README.md  _load.py  meta.toml  pyproject.toml
cookbooks/spatiotemporal-tactical-queries/rust/: README.md
cookbooks/team-sports-tactical-world-model/: README.md  meta.toml  pyproject.toml
cookbooks/team-sports-tactical-world-model/rust/: Cargo.toml  README.md
cookbooks/team-sports-tactical-world-model/rust/src/: lib.rs
cookbooks/temporal-counterfactual-replay/: 01-fraud-decision-audit.py  02-robotics-control-replay.py  03-iot-trigger-replay.py  README.md  meta.toml  pyproject.toml
cookbooks/temporal-counterfactual-replay/rust/: Cargo.toml  README.md
cookbooks/temporal-spatial-parquet-ingest/: 00-make-sample.py  01-schema-design.md  02-parquet-load.py  03-spatial-bulk-load.md  04-temporal-queries.py  05-validate-vs-duckdb.py  README.md  meta.toml  pyproject.toml
cookbooks/temporal-spatial-parquet-ingest/rust/: Cargo.toml  README.md
cookbooks/virtual-labels-over-parquet/: 01-register.py  README.md  meta.toml  pyproject.toml
create-arcflow/: README.md  index.mjs  package.json  tsup.config.ts
create-arcflow/templates/python/: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
create-arcflow/templates/python/src/__PACKAGE_NAME__/: __init__.py  main.py
create-arcflow/templates/python/tests/: test_graph.py
docs/: CONTRIBUTING.md  README.md  _AGENTS.md  _agent-optimization.md  _config.json  agent-native.mdx  algorithms.mdx  architecture.mdx  behavior-graph.mdx  bindings.mdx  cloud-architecture.mdx  cookbooks-index.mdx  event-bus.mdx  event-sourcing.mdx  get-started.mdx  gpu.mdx  installation.mdx  licensing.mdx  live-queries.mdx  mcp.mdx  platform.mdx  pricing.mdx  project-setup.mdx  quickstart.mdx  reactive.mdx  relay.mdx  reproducible-build.md  spatial-knowledge.mdx  sync.mdx  temporal.mdx  trusted-rag.mdx  vector-search.mdx  worldcypher.mdx
examples/: .gitignore  CONTRIBUTING.md  README.md  run-ci.sh
examples/agent-knowledge-base/rust/: Cargo.toml
examples/agent-knowledge-base/rust/src/: lib.rs
examples/algo-trading-world-model/rust/: Cargo.toml
examples/algo-trading-world-model/rust/src/: lib.rs
examples/fraud-graph-traversal/rust/: Cargo.toml  README.md
examples/lakehouse-count-fast-path/: 01-count.py  README.md  pyproject.toml
examples/multi-stream-spatiotemporal-world-model/: 02-identity-layer.py  04-tracking-bulk-load.py  05-multi-stream-attach.py  07-spatial-queries.py  08-temporal-queries.py  09-live-views.py  10-triggers-and-skills.py  11-validate-internal.py  12-replay-at-rate.py  README.md  meta.toml  pyproject.toml
examples/multi-stream-spatiotemporal-world-model/data/sample/: events.parquet  scenes.parquet  tracking.parquet
examples/multi-stream-spatiotemporal-world-model/rust/: Cargo.toml  README.md
examples/sensor-fusion-livequery/: 00-make-sample.py  01-schema-design.md  02-load-stream.py  03-trust-weighted-alerts.py  _load.py  pyproject.toml
examples/sensor-fusion-livequery/data/: stream.parquet
examples/sensor-fusion-livequery/rust/: Cargo.toml
examples/sensor-fusion-livequery/rust/src/: lib.rs
examples/spatiotemporal-tactical-queries/rust/: Cargo.toml
examples/spatiotemporal-tactical-queries/rust/src/: lib.rs
examples/team-sports-tactical-world-model/: 01-tactical-world-model.py  02-pattern-detection.py  03-tactical-replay-and-fusion.py  README.md  _load.py  meta.toml  pyproject.toml
examples/team-sports-tactical-world-model/rust/: Cargo.toml
examples/temporal-counterfactual-replay/rust/: Cargo.toml
fixtures/: README.md  knowledge-graph.cypher  social-network.cypher
install/: README.md  install.sh
kanban/: MISSION-doc-alignment.md  (+1 more)
(+642 files in other folders)
