[project]
name = "arcflow-cookbook-template"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = [
    "oz-arcflow==1.6.6",
]

# `oz-arcflow` resolves through OZ's PEP 503 simple index. PEP 503 is the
# same protocol PyPI implements, so `uv sync` treats it like any normal
# Python package install.
[[tool.uv.index]]
name = "oz"
url = "https://staging.oz.com/pypi/simple/"
explicit = true

[tool.uv.sources]
oz-arcflow = { index = "oz" }
