[project]
name = "arcflow-cookbook-agent-knowledge-base"
version = "1.6.7"
description = "ArcFlow recipe: confidence-scored GraphRAG over a small synthesized document corpus — one tunable knob trading recall for precision."
requires-python = ">=3.10"
dependencies = [
    "oz-arcflow==1.6.7",
]

[tool.uv]
index-url = "https://staging.oz.com/pypi/simple/"

[tool.uv.sources]
oz-arcflow = { index = "https://staging.oz.com/pypi/simple/" }
