[project]
name = "arcflow-cookbook-agent-knowledge-base"
version = "0.7.2"
description = "ArcFlow recipe: confidence-scored GraphRAG over a small synthesized document corpus — one tunable knob trading recall for precision."
requires-python = ">=3.10"
dependencies = [
    # `oz-arcflow` Python wheel is planned for RAM-C2 (2026-Q3) on
    # public PyPI. This pin describes the target end-state; `uv sync`
    # will fail until the wheel ships.
    "oz-arcflow==0.7.2",
]
