[project]
name = "algo-trading-world-model"
version = "0.1.0"
description = "The operational world model your LLM-driven trading agent reads, writes, and remembers from — persistent memory, orchestrated context, evidence-algebra fusion."
requires-python = ">=3.11"
dependencies = [
  "oz-arcflow==1.6.7",
]

[tool.uv]
index-url = "https://staging.oz.com/pypi/simple/"

[tool.uv.sources]
oz-arcflow = { index = "https://staging.oz.com/pypi/simple/" }
