[project]
name = "algo-trading-world-model"
version = "0.1.0"
description = "The operational world model your LLM-driven trading agent reads, writes, and remembers from — persistent memory, orchestrated context, evidence-algebra fusion."
requires-python = ">=3.11"
dependencies = [
  # `oz-arcflow` Python wheel is planned for RAM-C2 (2026-Q3) on
  # public PyPI. This pin describes the target end-state; `uv sync`
  # will fail until the wheel ships.
  "oz-arcflow==0.7.2",
]
