[project]
name = "arcflow-cookbook-fraud-graph-traversal"
version = "1.6.6"
description = "ArcFlow recipe: fraud detection over a transfer graph — fan-in, fan-out, layering chains."
requires-python = ">=3.10"
dependencies = [
    "oz-arcflow==1.6.6",
    "pyarrow>=16",
]

[tool.uv.sources]
oz-arcflow = { path = "../../../../arcflow/python/dist/oz_arcflow-1.6.6-py3-none-any.whl" }
