[project]
name = "from-sql-to-arcflow"
version = "0.1.0"
description = "Side-by-side DuckDB and ArcFlow for the same question — graph traversal, temporal AS OF, confidence-tiered retrieval."
requires-python = ">=3.11"
dependencies = [
  # `oz-arcflow` Python wheel is planned for RAM-C2 (2026-Q3) on
  # public PyPI. This pin describes the target end-state; `uv sync`
  # will fail until the wheel ships.
  "oz-arcflow==1.6.27",
  "duckdb>=1.0",
]
