[project]
name = "arcflow-cookbook-multi-stream-spatiotemporal-world-model"
version = "1.6.6"
description = "ArcFlow cookbook recipe: 60 Hz multi-entity tracking world model with synced auxiliary streams (3D scene reconstruction, biomechanical telemetry, event annotations)."
requires-python = ">=3.10"
dependencies = [
    "oz-arcflow==1.6.6",
    "pyarrow>=16",
    "numpy>=1.26",
]

# `oz-arcflow` resolves through OZ's PEP 503 simple index during alpha; same
# protocol PyPI implements, so `uv sync` treats it like any normal package.
# When the manifest flips to `python: shipped` and `oz-arcflow` lands on
# public PyPI, this stanza becomes redundant.
[[tool.uv.index]]
name = "oz"
url = "https://staging.oz.com/pypi/simple/"
explicit = true

[tool.uv.sources]
oz-arcflow = { index = "oz" }
