[project]
name = "arcflow-cookbook-sensor-fusion-livequery"
version = "1.6.7"
description = "ArcFlow recipe: multi-sensor fusion with trust-weighted alerts — every reading carries its own confidence, the fusion query is one MATCH with one weighted-aggregate expression."
requires-python = ">=3.10"
dependencies = [
    "oz-arcflow==1.6.7",
    "pyarrow>=16",
    "numpy>=1.26",
]

[tool.uv]
index-url = "https://staging.oz.com/pypi/simple/"

[tool.uv.sources]
oz-arcflow = { index = "https://staging.oz.com/pypi/simple/" }
