[project]
name = "spatiotemporal-tactical-queries"
version = "0.1.0"
description = "Tactical query patterns over a spatiotemporal world model — counterfactual replay, confidence-weighted ER, observed-vs-predicted fusion."
requires-python = ">=3.11"
dependencies = [
  "oz-arcflow==1.6.7",
]

[tool.uv]
index-url = "https://staging.oz.com/pypi/simple/"

[tool.uv.sources]
oz-arcflow = { index = "https://staging.oz.com/pypi/simple/" }
