[project]
name = "arcflow-cookbook-team-sports-tactical-world-model"
version = "1.6.7"
description = "ArcFlow recipe: advanced tactical pattern detection — pressing, line-breaking pass, defensive compression, counter-attack origin — against a frame-resolution operational world model."
requires-python = ">=3.11"
dependencies = [
    "oz-arcflow==1.6.7",
]

[tool.uv]
index-url = "https://staging.oz.com/pypi/simple/"

[tool.uv.sources]
oz-arcflow = { index = "https://staging.oz.com/pypi/simple/" }
