[project]
name = "temporal-counterfactual-replay"
version = "0.1.0"
description = "AS OF seq replay across three domains — fraud audit, robotics control, IoT trigger debug."
requires-python = ">=3.11"
dependencies = [
  "oz-arcflow==1.6.7",
]

[tool.uv]
index-url = "https://staging.oz.com/pypi/simple/"

[tool.uv.sources]
oz-arcflow = { index = "https://staging.oz.com/pypi/simple/" }
