[project]
name = "temporal-counterfactual-replay"
version = "0.1.0"
description = "AS OF seq replay across three domains — fraud audit, robotics control, IoT trigger debug."
requires-python = ">=3.11"
dependencies = [
  # `oz-arcflow` Python wheel is planned for RAM-C2 (2026-Q3) on
  # public PyPI. This pin describes the target end-state; `uv sync`
  # will fail until the wheel ships.
  "oz-arcflow==1.6.86",
]
