[project]
name = "arcflow-cookbook-temporal-spatial-parquet-ingest"
version = "1.6.7"
description = "ArcFlow recipe: large-batch temporal + spatial Parquet → graph world model, validated cell-for-cell against DuckDB on the same input."
requires-python = ">=3.10"
dependencies = [
    "oz-arcflow==1.6.7",
    "pyarrow>=16",
    "duckdb>=1.0",
    "numpy>=1.26",
]

# `oz-arcflow` resolves through OZ's PEP 503 simple index — same protocol
# PyPI implements, so `uv sync` treats it like any normal package.
# Distribution name on the index is `oz-arcflow`; import name is `arcflow`
# (Pillow/PIL split).
[[tool.uv.index]]
name = "oz"
url = "https://staging.oz.com/pypi/simple/"
explicit = true

[tool.uv.sources]
oz-arcflow = { index = "oz" }
