[project]
name = "arcflow-cookbook-multi-stream-spatiotemporal-world-model"
version = "0.8.0"
description = "ArcFlow cookbook recipe: 60 Hz multi-entity tracking world model with synced auxiliary streams (3D scene reconstruction, biomechanical telemetry, event annotations)."
requires-python = ">=3.10"
dependencies = [
    # `oz-arcflow` Python wheel is planned for RAM-C2 (2026-Q3) on
    # public PyPI. This pin describes the target end-state; `uv sync`
    # will fail until the wheel ships.
    "oz-arcflow==0.8.0",
    "pyarrow>=16",
    "numpy>=1.26",
]
