[package]
name = "agent-knowledge-base"
version = "0.1.0"
edition = "2021"
description = "ArcFlow Rust SDK example mirroring the agent-knowledge-base Python recipe — confidence-scored GraphRAG with multi-hop entity traversal, plus the Rust-only surface: CALL db.provenance() and register_live_proof on the retrieval view."

[dependencies]
arcflow-sdk = { git = "https://github.com/ozinc/arcflow-core", branch = "main" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[lib]
name = "agent_knowledge_base"
path = "src/lib.rs"

[[bin]]
name = "02-load"
path = "src/bin/02-load.rs"

[[bin]]
name = "03-confidence-retrieval"
path = "src/bin/03-confidence-retrieval.rs"
