[package]
name = "agent-knowledge-base"
version = "0.1.0"
edition = "2021"
description = "ArcFlow Rust SDK example mirroring the agent-knowledge-base Python recipe — confidence-scored GraphRAG with multi-hop entity traversal, plus the Rust-only surface: CALL db.provenance() and register_live_proof on the retrieval view."

[dependencies]
arcflow = "0.8"  # planned RAM-C3 / 2026-Q4 on crates.io
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[lib]
name = "agent_knowledge_base"
path = "src/lib.rs"

[[bin]]
name = "02-load"
path = "src/bin/02-load.rs"

[[bin]]
name = "03-confidence-retrieval"
path = "src/bin/03-confidence-retrieval.rs"
