[package]
name = "sensor-fusion-livequery"
version = "0.1.0"
edition = "2021"
description = "ArcFlow Rust SDK example mirroring the sensor-fusion-livequery Python recipe — multi-sensor fusion via CREATE LIVE VIEW + subscribe instead of the Python polling fallback."

[dependencies]
arcflow-sdk = { git = "https://github.com/ozinc/arcflow-core", branch = "main" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1"

[lib]
name = "sensor_fusion_livequery"
path = "src/lib.rs"

[[bin]]
name = "02-load-stream"
path = "src/bin/02-load-stream.rs"

[[bin]]
name = "03-trust-weighted-alerts"
path = "src/bin/03-trust-weighted-alerts.rs"

[[bin]]
name = "04-live-views-and-subscribe"
path = "src/bin/04-live-views-and-subscribe.rs"
