[package]
name = "temporal-counterfactual-replay"
version = "0.1.0"
edition = "2021"
description = "ArcFlow Rust SDK example mirroring the temporal-counterfactual-replay Python recipe — AS OF seq across fraud / robotics / IoT domains, plus provenance_chain walks for the audit trail."

[dependencies]
arcflow = "0.8"  # planned RAM-C3 / 2026-Q4 on crates.io
anyhow = "1"
tempfile = "3"

[[bin]]
name = "01-fraud-decision-audit"
path = "src/bin/01-fraud-decision-audit.rs"

[[bin]]
name = "02-robotics-control-replay"
path = "src/bin/02-robotics-control-replay.rs"

[[bin]]
name = "03-iot-trigger-replay"
path = "src/bin/03-iot-trigger-replay.rs"
